--- a/deeplink.html
+++ b/deeplink.html
@@ -1,42 +1,22 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8" />
-  <title>Uygulama Yönlendiriliyor...</title>
-  <script>
-    (function () {
-      const params = new URLSearchParams(window.location.search);
-      const token = params.get("token");
-
-      if (token) {
-        const appLink = `studybuddy://resetPassword?token=${token}`;
-        window.location.href = appLink;
-
-        setTimeout(() => {
-          document.body.innerHTML += `
-            <p style="color:red; margin-top: 20px;">
-              Uygulama açılmıyorsa yüklü olduğundan emin olun ve tekrar deneyin.
-            </p>`;
-        }, 3000);
-      } else {
-        document.body.innerHTML = "<p>Token bulunamadı.</p>";
-      }
-    })();
-  </script>
-  <style>
-    body {
-      font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      height: 100vh;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-  </style>
-</head>
-<body>
-  <p>Uygulama açılıyor, lütfen bekleyin...</p>
-</body>
+<html>
+  <head>
+    <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+  </head>
+  <body>
+    <form>
+      <div class="cf-turnstile" data-sitekey="YOUR_SITE_KEY_HERE"></div>
+    </form>
+    <script>
+      window.onload = () => {
+        const interval = setInterval(() => {
+          const response = document.querySelector('iframe')?.contentWindow?.document.querySelector('[name="cf-turnstile-response"]')?.value;
+          if (response) {
+            window.ReactNativeWebView?.postMessage(response);
+            clearInterval(interval);
+          }
+        }, 100);
+      };
+    </script>
+  </body>
 </html>
