--- a/cloudflare.html
+++ b/cloudflare.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <form>
-      <div class="cf-turnstile" data-sitekey="YOUR_SITE_KEY_HERE"></div>
+      <div class="cf-turnstile" data-sitekey="0x4AAAAAABgL7o3lvTiz2j_s"></div>
     </form>
     <script>
       window.onload = () => {
