--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         height: 100vh;
         background-color: white;
       }
+
+      .cf-turnstile {
+        transform: scale(2.3); /* 🔍 Ölçeği büyüttük */
+        transform-origin: top left;
+      }
     </style>
   </head>
   <body>
