--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
     <style>
-      body {
+      html, body {
         margin: 0;
+        height: 100%;
+        background-color: white;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        background-color: white;
       }
 
       .cf-turnstile {
-        transform: scale(2.3); /* 🔍 Ölçeği büyüttük */
-        transform-origin: top left;
+        transform: scale(1.8); /* 📏 Orta boy */
+        transform-origin: top center; /* 📌 Ortalar */
       }
     </style>
   </head>
