--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         justify-content: center;
         align-items: center;
       }
-   .cf-turnstile {
-  transform: scale(1.8);           /* 🔽 2.4 → 1.8 veya 2.0 */
-  transform-origin: top center;
+.cf-turnstile {
+  width: 100% !important;
+  max-width: 320px;
 }
+
 
     </style>
   </head>
